# verity-ranker

./: .gitattributes  .gitignore  Dockerfile  HACKATHON.md  LICENSE  QUICKSTART.md  README.md  ablation_report.py  app.py  filter_cache.py  precompute.py  pyproject.toml  rank.py  requirements.txt  run_v2.py  submission_metadata.yaml
.streamlit/: config.toml
cache/: candidate_features.jsonl  manifest.json
configs/: scoring_weights.json
configs/v2/: models.yaml  scoring_weights.yaml  verification_rules.yaml
data/hackathon/: candidates.jsonl
data/sample/candidates/: C005.txt
docs/: ablation_report.json  evaluation_report.md  run1.json  v2_methodology.md
outputs/: hackathon_rank_test.csv
outputs/hackathon_cache_test/: candidate_features.jsonl  hyde_profiles.json  jd_profile.json  manifest.json
prompts/: jd_intelligence.md
schemas/: candidate_profile.schema.json  evidence_ledger.schema.json  ranked_output.schema.json
scripts/: validate_submission.py
src/ai_hiring_ranker/: __init__.py  config.py  llm_provider.py
src/ai_hiring_ranker/ablation/: __init__.py  evaluator.py  schemas.py
src/ai_hiring_ranker/agents/: __init__.py
src/ai_hiring_ranker/audits/: __init__.py  auditor.py  schemas.py
src/ai_hiring_ranker/candidate_extraction/: __init__.py
src/verity_ranker/: candidates.py  cli.py  io.py  pipeline.py  scoring.py  verification.py
submission/: ranked_output.csv  ranked_output_BEFORE_fix.csv  selected_features.jsonl
tests/: test_claim_verification.py  test_ingestion.py  test_jd_intelligence.py  test_streamlit_app.py  test_v1_pipeline.py
(+32 files in other folders)
